[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/menus/menu cursor.png" type="Texture" id=1]
[ext_resource path="res://sprites/menus/menu 9slice.png" type="Texture" id=2]
[ext_resource path="res://scripts/menu/MenuController.gd" type="Script" id=3]
[ext_resource path="res://scripts/menu/ButtonAction.gd" type="Script" id=4]

[node name="options_root" type="NinePatchRect"]
margin_right = 203.0
margin_bottom = 193.0
rect_clip_content = true
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
script = ExtResource( 3 )
menuButtonsPath = NodePath("margin/menu_collection")

[node name="selector_margin" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 25.0
grow_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="selector" type="NinePatchRect" parent="selector_margin"]
margin_left = 10.0
margin_right = 193.0
margin_bottom = 15.0
texture = ExtResource( 1 )
patch_margin_left = 14
patch_margin_right = 14
axis_stretch_vertical = 1

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="menu_collection" type="VBoxContainer" parent="margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 193.0
margin_bottom = 184.0
custom_constants/separation = 6

[node name="run" type="CenterContainer" parent="margin/menu_collection"]
margin_right = 183.0
margin_bottom = 14.0
script = ExtResource( 4 )
action = 2
actionName = "run"

[node name="text" type="Label" parent="margin/menu_collection/run"]
margin_left = 79.0
margin_right = 103.0
margin_bottom = 14.0
text = "Run"

[node name="interact" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 20.0
margin_right = 183.0
margin_bottom = 34.0
script = ExtResource( 4 )
action = 2
actionName = "interact"

[node name="text" type="Label" parent="margin/menu_collection/interact"]
margin_left = 66.0
margin_right = 116.0
margin_bottom = 14.0
text = "Interact"

[node name="menu" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 40.0
margin_right = 183.0
margin_bottom = 54.0
script = ExtResource( 4 )
action = 2
actionName = "menu"

[node name="text" type="Label" parent="margin/menu_collection/menu"]
margin_left = 73.0
margin_right = 109.0
margin_bottom = 14.0
text = "Menu"

[node name="focus" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 60.0
margin_right = 183.0
margin_bottom = 74.0
script = ExtResource( 4 )
action = 2
actionName = "focus"

[node name="text" type="Label" parent="margin/menu_collection/focus"]
margin_left = 73.0
margin_right = 110.0
margin_bottom = 14.0
text = "Focus"

[node name="move_left" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 80.0
margin_right = 183.0
margin_bottom = 94.0
script = ExtResource( 4 )
action = 2
actionName = "move_left"

[node name="text" type="Label" parent="margin/menu_collection/move_left"]
margin_left = 60.0
margin_right = 123.0
margin_bottom = 14.0
text = "Move Left"

[node name="move_right" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 100.0
margin_right = 183.0
margin_bottom = 114.0
script = ExtResource( 4 )
action = 2
actionName = "move_right"

[node name="text" type="Label" parent="margin/menu_collection/move_right"]
margin_left = 56.0
margin_right = 127.0
margin_bottom = 14.0
text = "Move Right"

[node name="move_up" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 120.0
margin_right = 183.0
margin_bottom = 134.0
script = ExtResource( 4 )
action = 2
actionName = "move_up"

[node name="text" type="Label" parent="margin/menu_collection/move_up"]
margin_left = 63.0
margin_right = 120.0
margin_bottom = 14.0
text = "Move Up"

[node name="move_down" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 140.0
margin_right = 183.0
margin_bottom = 154.0
script = ExtResource( 4 )
action = 2
actionName = "move_down"

[node name="text" type="Label" parent="margin/menu_collection/move_down"]
margin_left = 54.0
margin_right = 129.0
margin_bottom = 14.0
text = "Move Down"

[node name="cancel" type="CenterContainer" parent="margin/menu_collection"]
margin_top = 160.0
margin_right = 183.0
margin_bottom = 174.0
script = ExtResource( 4 )
action = 3

[node name="text" type="Label" parent="margin/menu_collection/cancel"]
margin_left = 70.0
margin_right = 112.0
margin_bottom = 14.0
text = "Cancel"
